--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,6 +28,8 @@
 // Pages layout
 @import "header";
 @import "layout-index";
+@import "layout-ladder";
+@import "layout-qa";
 @import "footer";
 
 // --------------------------------------[ style.css end ]
