--- a/src/sass/_layout-index.scss
+++ b/src/sass/_layout-index.scss
@@ -10,182 +10,159 @@ a {
 	right: 0;
 	margin-bottom: 0;
 	height: 10px;
-	background-color: $grey;
+	background-color: neos(teal-dark);
 	border-radius: 0;
 	box-shadow: none;
 	&-bar {
-		background-color: functional(yellow);
+		background-color: neos(teal-medium);
 		box-shadow: none;
+	}
+	&-hurryup {
+
 	}
 }
 
 // Content
 .content {
 	display: flex;
-	height: calc(100vh - 10px);
-	// background-color: functional(blue);
-	// padding: 2vh;
 	justify-content: space-between;
-}
-
-.section-ladder {
-	// flex: 1;
-	height: calc(100vh - 10px);
-	width: 14vw;
-	.list-position {
-		display: flex;
-		flex-direction: column-reverse;
-		margin-bottom: 0;
-		li {
-			display: flex;
-			flex: 1 1 100%;
-			height: calc((100vh - 10px) / 15);
-			background-color: $grey;
-			color: $white;
-			font-size: 16px;
-			align-items: center;
-			border-top: 1px solid darken($grey, 5%);
-			&:last-child {
-				border-top: 0;
-			}
-			// justify-content: center;
-			// padding: 0 1em;
-			&.reward {
-				background-color: functional(yellow);
-				.number,
-				.step {
-					color: $grey;
-				}
-			}
-			&.active {
-				.steps {
-					background-color: rgba($white, 0.2);
-				}
-			}
-			.steps {
-				width: 100%;
-				height: 100%;
-				display: flex;
-				justify-content: space-between;
-				padding-right: 18px;
-			}
-			.number {
-				display: flex;
-				background-color: rgba($black, 0.1);
-				width: 40px;
-				height: 100%;
-				text-align: center;
-				font-weight: bold;
-				align-self: center;
-				align-items: center;
-				justify-content: center;
-			}
-			.step {
-				display: inline-block;
-				align-self: center;
-				// height: 100%;
-			}
-			.icon {
-				align-self: center;
-				font-size: 1.4em;
-				&.fa-circle {
-					color: rgba($black, 0.3);
-				}
-				&.fa-check-circle {
-					color: functional(green);
-				}
-				&.fa-times-circle {
-					color: functional(red);
-				}
-			}
-		}
-	}
-}
-
-.section-qa {
-	// flex: 1;
-	height: calc(100vh - 10px);
-	width: 86vw;
-	display: flex;
-	// flex-direction: column;
-	justify-content: space-between;
-	.q {
-		width: 60%;
-		padding: 3em 5em;
-		background-color: functional(yellow);
-		.step-counter {
-			text-transform: uppercase;
-			color: $white;
-		}
-		.question-title {
-			color: $grey;
-			line-height: 1.3;
-		}
-	}
-	.a {
-		width: 40%;
-		background-color: $grey;
-		.list-answers {
-			display: flex;
-			// flex-wrap: wrap;
-			flex-direction: column;
-			padding: 3em 2em;
-			li {
-				// width: 50%;
-				height: 15vh;
-				margin-bottom: 1em;
-			}
-			.btn {
-				// display: block;
-				display: flex;
+	&.index {
+		height: 100vh;
+		background: radial-gradient(neos(teal-light), neos(teal-medium));
+		.section-intro {
+			width: 70vw;
+			.branding {
 				position: relative;
-				align-items: center;
-				justify-content: center;
-				width: 100%;
-				height: 100%;
-				border-radius: 0;
-				font-size: 30px;
-				white-space: normal;
-				padding-left: 60px;
-				&::before {
-					position: absolute;
-					left: 0;
-					top: 0;
-					bottom: 0;
-					width: 60px;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					background-color: rgba($black, 0.2);
-				}
-				&-a {
-					&::before {
-						content: 'A';
-					}
-				}
-				&-b {
-					&::before {
-						content: 'B';
-					}
-				}
-				&-c {
-					&::before {
-						content: 'C';
-					}
-				}
-				&-d {
-					&::before {
-						content: 'D';
-					}
+			}
+			.logo {
+				width: 70%;
+				max-width: 900px;
+				margin: 0 auto;
+				padding-top: 3em;
+				padding-bottom: 5em;
+				border-bottom: 2px solid $white;
+				img {
+					margin: 0 13em;
 				}
 			}
+			.intro {
+				padding: 2em 5em;
+				color: neos(teal-dark);
+				width: 70%;
+				// max-width: 900px;
+				margin: 0 auto;
+			}
 		}
+		.section-start {
+			width: 30vw;
+			padding: 2em 5em;
+			background-color: neos(teal-dark);
+			label {
+				color: $white;
+			}
+			.form-control {
+				border-radius: 0;
+			}
+			.btn-start {
+				margin-top: 1.5em;
+				padding-top: 1em;
+				padding-bottom: 1em;
+			}
+		}
+	}
+	&.quiz {
+		height: calc(100vh - 10px);
 	}
 }
 
 
 
+// Sun rays
 
+.sunburst {
+   width: 1368px;
+   height: 680px;
+   margin:-11px -11px -11px -11px;
+   overflow: hidden;
+   background: #fff;
+}
 
+.sunburst .outer {
+   width: 2000px;
+   height: 910px;
+   padding-top: 1090px;
+   margin: -800px 0 0 -310px;
+   animation-name: rotate;
+   animation-duration:2s;
+   animation-iteration-count:infinite;
+   animation-timing-function:linear;
+   -moz-animation-name: rotate1;
+   -moz-animation-duration:2s;
+   -moz-animation-iteration-count:infinite;
+   -moz-animation-timing-function:linear;
+}
 
+.sunburst b {
+   display: block;
+   width: 0;
+   height: 0;
+   border-width: 90px 1000px;
+   margin: -180px 0 0 0;
+   border-color: transparent black;
+   border-style: solid;
+}
 
+.sunburst b:nth-child(1) { 
+   transform:rotate(20deg);  
+   -moz-transform:rotate(20deg);  
+}
+
+.sunburst b:nth-child(2) { 
+   transform:rotate(40deg);  
+   -moz-transform:rotate(40deg);  
+}
+
+.sunburst b:nth-child(3) { 
+   transform:rotate(60deg);  
+   -moz-transform:rotate(60deg);  
+}
+
+.sunburst b:nth-child(4) { 
+   transform:rotate(80deg);  
+   -moz-transform:rotate(80deg);  
+}
+
+.sunburst b:nth-child(5) { 
+   transform:rotate(100deg); 
+   -moz-transform:rotate(100deg); 
+}
+
+.sunburst b:nth-child(6) {    
+   transform:rotate(120deg); 
+   -moz-transform:rotate(120deg); 
+}
+
+.sunburst b:nth-child(7) { 
+   transform:rotate(140deg); 
+   -moz-transform:rotate(140deg); 
+}
+
+.sunburst b:nth-child(8) { 
+   transform:rotate(160deg); 
+   -moz-transform:rotate(160deg); 
+}
+
+.sunburst b:nth-child(9) { 
+   transform:rotate(180deg); 
+   -moz-transform:rotate(180deg); 
+}
+
+@keyframes rotate {
+    from { transform: rotate(0deg); }
+    to   { transform: rotate(20deg); }
+}
+
+@-moz-keyframes rotate {
+    from { -moz-transform: rotate(0deg); }
+    to   { -moz-transform: rotate(20deg); }
+}
