--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,6 +30,7 @@
 @import "layout-index";
 @import "layout-ladder";
 @import "layout-qa";
+@import "layout-modal";
 @import "footer";
 
 // --------------------------------------[ style.css end ]
