Answers radio buttons

--- a/src/sass/_layout-qa.scss
+++ b/src/sass/_layout-qa.scss
@@ -62,6 +62,10 @@
 							color: $white;
 						}
 					}
+					// Radio button answers
+					input[type="radio"] {
+						display: none;
+					}
 				}
 				&.answer-correct {
 					.btn {
