--- a/src/sass/_layout-index.scss
+++ b/src/sass/_layout-index.scss
@@ -198,7 +198,24 @@ a {
 }
 
 // Leaderboard
+.section-leaderboard {
+	overflow: scroll;
+	&::-webkit-scrollbar {
+		width: 5px;
+	}
+	&::-webkit-scrollbar-track {
+		background-color: darken(neos(teal-dark), 5%);
+	}
+	&::-webkit-scrollbar-thumb {
+		background: rgba(neos(teal-medium),0.8); 
+	}
+	&::-webkit-scrollbar-thumb:window-inactive {
+		background: rgba(255,0,0,0.4); 
+	}
+}
 .leaderboard {
+	margin-bottom: 0;
+	padding-bottom: 46px;
 	li {
 		display: flex;
 		align-items: center;
@@ -223,6 +240,19 @@ a {
 			justify-content: flex-end;
 			flex: 1;
 			padding-right: 1em;
+		}
+		&.sticky {
+			position: sticky;
+			top: 0;
+			background-color: darken(neos(teal-dark), 5%);
+		}
+		&:not(.sticky) {
+			.user-position {
+				&::before {
+					counter-increment: counter;
+					content: counter(counter) ".";
+				}
+			}
 		}
 	}
 }
