--- a/src/sass/_layout-ladder.scss
+++ b/src/sass/_layout-ladder.scss
@@ -30,7 +30,7 @@
 			flex: 1 1 100%;
 			height: calc((100vh - #{$progress-h} - 80px) / 15);
 			background-color: neos(teal-dark);
-			color: $white;
+			color: neos(teal-medium);
 			font-size: 16px;
 			align-items: center;
 			border-top: 1px solid darken(neos(teal-dark), 5%);
@@ -39,14 +39,15 @@
 			}
 			&.reward {
 				background-color: neos(teal-medium);
-				.number,
-				.step {
-					// color: $grey;
+				color: neos(teal-light);
+				&.active {
+					color: $white;
 				}
 			}
 			&.active {
 				.steps {
 					background-color: rgba($white, 0.2);
+					color: $white;
 				}
 			}
 			.steps {
