--- a/src/sass/_template.scss
+++ b/src/sass/_template.scss
@@ -79,3 +79,15 @@ body {
 		text-align: center;
 	}
 }
+
+// Inputs
+.input-lg {
+	height: 40px;
+	padding: 8px 12px;
+}
+
+// HR
+hr {
+	border-top-color: neos(teal-medium);
+	width: 70%;
+}
