--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,6 +28,7 @@
 // Pages layout
 @import "header";
 @import "layout-index";
+@import "layout-guide";
 @import "layout-ladder";
 @import "layout-qa";
 @import "layout-modal";
