Relative sizing, Autoplay and bugfixes

--- a/src/sass/_layout-guide.scss
+++ b/src/sass/_layout-guide.scss
@@ -26,12 +26,13 @@
 
 	video {
 		width: 100%;
-    }
+		border: 15px solid neos(teal-dark);
+  }
     
-    .guide-title {
-        color: neos(teal-dark);
-        font-weight: 700;
-        line-height: 1.3;
+  .guide-title {
+		color: neos(teal-dark);
+		font-weight: 700;
+		line-height: 1.3;
 	}
 	
 	.lead {
